--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -54,7 +54,13 @@
       <div>
         <i class="fa-regular fa-hand-point-right"></i>
         <p>
-          Farm Match allows Farmers to post a job and receive quotations from interested peer reviewed Agri Contractors and Farm Workers.
+          Farm Match allows Farmers to post a job to the community directly.
+        </p>
+      </div>
+      <div>
+        <i class="fa-regular fa-hand-point-right"></i>
+        <p>
+          Interested Agri Contractors and Farm Workers can respond with their quotations.
         </p>
       </div>
     </div>
@@ -87,40 +93,40 @@
 
     <%# REASONS FOR FARMERS (can be switched with REASONS FOR CONTRACTORS) %>
     <div id="why-farmers" data-section-target="whyFarmersSection">
-      <div class="reasons container">
+      <div class="reasons">
         <div class="reason-card reason-card--farmers">
           <div>
             <i class="fa-regular fa-thumbs-up"></i>
           </div>
-          <h2>Easy to use</h2>
+          <h2>Easy to Use</h2>
           <p>Simply post your task on the website & wait for the responses to come in!</p>
         </div>
         <div class="reason-card reason-card--farmers">
           <div>
             <i class="fa-regular fa-clock"></i>
           </div>
-          <h2>Save time</h2>
+          <h2>Save Time</h2>
           <p>No more ringing around contractors or advertising in classifieds</p>
         </div>
         <div class="reason-card reason-card--farmers">
           <div>
             <i class="fa-solid fa-piggy-bank"></i>
           </div>
-          <h2>Save money</h2>
+          <h2>Save Money</h2>
           <p>Compare quotes to get competitive pricing & get better value for money</p>
         </div>
         <div class="reason-card reason-card--farmers">
           <div>
             <i class="fa-regular fa-trash-can"></i>
           </div>
-          <h2>No spam</h2>
+          <h2>No Spam</h2>
           <p>Our algorithm matches you only with Agri Contractors & Farm Workers who have express a direct interest in your task </p>
         </div>
         <div class="reason-card reason-card--farmers">
           <div>
             <i class="fa-solid fa-magnifying-glass"></i>
           </div>
-          <h2>Peer reviewed</h2>
+          <h2>Peer Reviewed</h2>
           <p>Leave a review once the work is done & help build a reliable Agri Contractors & Farmer Workers </p>
         </div>
       </div>
@@ -128,19 +134,19 @@
 
     <%# REASONS FOR CONTRACTORS (can be switched with REASONS FOR FARMERS)%>
     <div class="hidden" id="why-contractors" data-section-target="whyContractorsSection">
-      <div class="reasons container">
+      <div class="reasons">
         <div class="reason-card reason-card--contractors">
           <div>
             <i class="fa-regular fa-thumbs-up"></i>
           </div>
-          <h2>Easy to use</h2>
+          <h2>Easy to Use</h2>
           <p>Want the task? Then simply express interest in it on the website </p>
         </div>
         <div class="reason-card reason-card--contractors">
           <div>
             <i class="fa-regular fa-clock"></i>
           </div>
-          <h2>Save time</h2>
+          <h2>Save Time</h2>
           <p>Our algorithm ensures you're matched with tasks that fit your preferences</p>
         </div>
         <div class="reason-card reason-card--contractors">
@@ -161,7 +167,7 @@
           <div>
             <i class="fa-solid fa-medal"></i>
           </div>
-          <h2>Build a reputation </h2>
+          <h2>Build a Reputation </h2>
           <p>Receive reviews from farmers after completing tasks & build a positive reputation leading to more work opportunities  </p>
         </div>
       </div>
