--- a/app/views/potential_users/index.html.erb
+++ b/app/views/potential_users/index.html.erb
@@ -1,7 +1,12 @@
-<h1>Potential Users</h1>
 
-<%= link_to "Log Out", destroy_user_session_path, data: { turbo_method: "delete" }  %>
+<div class="container">
 
-<% @potential_users.each do |pu|  %>
-  <%= pu.name %>
-<% end %>
+  <h1>Potential Users</h1>
+
+  <%= link_to "Log Out", destroy_user_session_path, data: { turbo_method: "delete" }  %>
+
+  <div class="card-container">
+    <%= render @potential_users %>
+  </div>
+
+</div>
