added linear gradient to background of section

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -29,6 +29,12 @@
     }
   }
 
+  &--primary-light {
+    color: var(--color-black);
+    background-color: var(--color-white);
+    border: 1px solid var(--primary);
+  }
+
   &--secondary {
     color: var(--color-white);
     background-image: linear-gradient(to right, var(--color-secondary), var(--color-secondary-rotate));
