--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -5,4 +5,9 @@
 
 .user-card {
   margin: var(--space-m) 0 var(--space-m) 0;
+
+  .user-card__header {
+    display: flex;
+    flex-direction: row;
+  }
 }
