--- a/app/assets/stylesheets/pages/_welcome.scss
+++ b/app/assets/stylesheets/pages/_welcome.scss
@@ -124,6 +124,9 @@
   }
 }
 
+.why-sign-up {
+
+}
 
 .why-and-how {
   display: flex;
@@ -143,16 +146,16 @@
 
 .why-and-how-header {
   margin-bottom: var(--space-m);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-  div {
+.title-buttons {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-  }
 
   h4 {
-    background-color: var(--color-primary);
     padding: var(--space-xxxs) var(--space-xs);
     border-radius: var(--border-radius);
     margin-right: var(--space-xxs);
@@ -160,20 +163,14 @@
     text-align: center;
   }
 
-  .chevrons {
-    flex-direction: row;
-    justify-content: center;
-    margin-top: var(--space-xs);
+  #farmers-button {
+    background-color: var(--color-primary);
+  }
+
+  #contractors-button {
+    border: 2px solid var(--color-tertiary);
   }
 }
-
-.chevrons .fa-solid {
-  font-size: var(--font-size-xxl);
-  margin-right: var(--space-xxxs);
-  margin-left: var(--space-xxxs);
-  cursor: pointer;
-}
-
 
 .reasons {
   display: flex;
@@ -186,11 +183,17 @@
 }
 
 #why-farmers {
-  background-color: var(--color-primary);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), var(--color-primary);
+  width: 100%;
+  padding-bottom: 2rem;
+  padding-top: 2rem;
 }
 
 #why-contractors {
-  background-color: var(--color-tertiary);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), var(--color-tertiary);
+  width: 100%;
+  padding-bottom: 2rem;
+  padding-top: 2rem;
 }
 
 .reason-card {
