--- a/app/views/potential_users/_potential_user.html.erb
+++ b/app/views/potential_users/_potential_user.html.erb
@@ -1,6 +1,9 @@
 
 <div class="user-card">
-  <h4><%= potential_user.name %></h1>
+  <div class="user-card__header">
+    <h4><%= potential_user.name %></h4>
+    <h4><%= potential_user.surname %></h4>
+  </div>
   <p><%= potential_user.email %></p>
   <p><%= potential_user.job %></p>
 </div>
