--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -19,7 +19,7 @@
 
 <div class="banner">
   <div class="title-container">
-    <h1 class="banner__title">FARM <br>MATCH</h1>
+    <h1 class="title banner__title">FARM <br>MATCH</h1>
   </div>
   <div class="banner__tagline">
     We connect Farmers with skilled Agri Contractors <br> and Farm Workers in Ireland
@@ -36,7 +36,7 @@
 <main data-controller="section">
   <div class="why-us">
     <div class="why-us__header">
-      <h2>WHY FARM MATCH?</h2>
+      <h2 class="title section__title section__title--green">WHY FARM MATCH?</h2>
     </div>
     <div class="why-us__body">
       <div>
@@ -81,7 +81,11 @@
 
   <section class="why-sign-up why-and-how">
     <div class="why-sign-up__header why-and-how-header">
-      <h2>WHY SIGN UP?</h2>
+      <h2 class="title section__title">WHY SIGN UP?</h2>
+      <div class="toggle">
+        <i class="fa-solid fa-toggle-on"></i>
+        <i class="fa-solid fa-toggle-off"></i>
+      </div>
       <div class="title-buttons">
         <h4 id="farmers-button" data-section-target="whyFarmersTitle" data-action="click->section#toggleSection">FARMERS</h4>
         <h4 id="contractors-button" data-section-target="whyFarmersTitle" data-action="click->section#toggleSection">AGRI CONTRACTORS & FARM WORKERS</h4>
@@ -182,7 +186,7 @@
 
   <section class="how-it-works container why-and-how">
     <div class="how-it-works__header why-and-how-header">
-      <h2>HOW DOES IT WORK?</h2>
+      <h2 class="title section__title section__title--green">HOW DOES IT WORK?</h2>
 
       <div class="title-buttons">
         <h4 id="farmers-button" data-section-target="whyFarmersTitle" data-action="click->section#toggleSection">FARMERS</h4>
