--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -19,6 +19,7 @@
   &--primary {
     color: var(--color-white);
     background-color: var(--color-primary);
+    border: 1px solid var(--color-text-header);
 
     &:hover,
     &:focus,
