changed .three-steps display style from grid to flex row

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -82,6 +82,10 @@
   <section class="why-sign-up why-and-how">
     <div class="why-sign-up__header why-and-how-header">
       <h2 class="title section__title">WHY SIGN UP?</h2>
+      <div class="section__category toggle">
+        <h2>FARMERS</h2>
+        <i class="fa-solid fa-toggle-on"></i>
+      </div>
       <div class="toggle">
         <i class="fa-solid fa-toggle-on"></i>
         <i class="fa-solid fa-toggle-off"></i>
