--- a/app/assets/stylesheets/pages/_welcome.scss
+++ b/app/assets/stylesheets/pages/_welcome.scss
@@ -143,6 +143,10 @@
   border: 1px solid gray;
   padding: 15px;
   box-shadow: 4px 2px rgba(0,0,0,0.2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 
   .fa-toggle-on, .fa-toggle-off {
     font-size: 2rem;
@@ -262,19 +266,25 @@
 
 
 .three-steps {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  gap: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 
   h1 {
     text-decoration: underline;
     text-decoration-color: var(--color-tertiary);
+  }
+
+  @include media(tabletAndUp) {
+    flex-wrap: nowrap;
   }
 }
 
 .card {
   text-align: center;
   padding: 20px;
+  width: 20rem;
 }
 
 .card__header {
