--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -77,12 +77,14 @@
     </div>
   </div>
 
-  <hr class="separator-line--gray">
-
   <section class="why-sign-up why-and-how">
     <div class="why-sign-up__header why-and-how-header">
       <h2 class="title section__title">WHY SIGN UP?</h2>
-      <div class="section__category toggle">
+      <div class="category-buttons">
+        <button class="btn btn--tertiary">FARMERS</button>
+        <button class="btn btn--flip">AGRI CONTRACTORS & FARM WORKERS</button>
+      </div>
+      <%# <div class="section__category toggle">
         <h2>FARMERS</h2>
         <i class="fa-solid fa-toggle-on"></i>
       </div>
@@ -93,7 +95,7 @@
       <div class="title-buttons">
         <h4 id="farmers-button" data-section-target="whyFarmersTitle" data-action="click->section#toggleSection">FARMERS</h4>
         <h4 id="contractors-button" data-section-target="whyFarmersTitle" data-action="click->section#toggleSection">AGRI CONTRACTORS & FARM WORKERS</h4>
-      </div>
+      </div> %>
     </div>
 
     <%# REASONS FOR FARMERS (can be switched with REASONS FOR CONTRACTORS) %>
@@ -185,8 +187,6 @@
     </div>
 
   </section>
-
-  <hr class="separator-line--gray">
 
   <section class="how-it-works container why-and-how">
     <div class="how-it-works__header why-and-how-header">
