--- a/app/assets/stylesheets/pages/_welcome.scss
+++ b/app/assets/stylesheets/pages/_welcome.scss
@@ -134,7 +134,10 @@
   width: 100%;
   padding-bottom: 4rem;
   padding-top: 4rem;
+}
 
+.why-sign-up-contractors {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), var(--color-tertiary);
 }
 
 .category-buttons {
