--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -35,7 +35,7 @@
     background-color: var(--color-background);
 
     &:hover {
-      box-shadow: 2px 2px var(--color-tertiary);
+      font-weight: bold;
     }
   }
 
