Fix issue with category buttons Make changes to stimulus controller to select all four buttons in both sections.

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -86,7 +86,7 @@
                 data-section-target="farmersButton"
                 data-action="click->section#selectSection">FARMERS</button>
         <button data-category="contractors"
-                class="btn btn--primary btn--flip"
+                class="btn btn--flip"
                 data-section-target="contractorsButton"
                 data-action="click->section#selectSection">AGRI CONTRACTORS & FARM WORKERS</button>
       </div>
@@ -176,7 +176,7 @@
 
     <div class="join">
       <%= link_to register_your_interest_path do %>
-        <button class="btn btn--primary" data-section-target="contractorsButton">JOIN THE WAITING LIST!</button>
+        <button class="btn btn--primary">JOIN THE WAITING LIST!</button>
       <% end %>
     </div>
 
@@ -192,7 +192,7 @@
                 data-section-target="farmersButton"
                 data-action="click->section#selectSection">FARMERS</button>
         <button data-category="contractors"
-                class="btn btn--primary btn--flip"
+                class="btn btn--flip"
                 data-section-target="contractorsButton"
                 data-action="click->section#selectSection">AGRI CONTRACTORS & FARM WORKERS</button>
       </div>
