add yellow background for contractors view in 'how does it work' section

--- a/app/assets/stylesheets/pages/_welcome.scss
+++ b/app/assets/stylesheets/pages/_welcome.scss
@@ -319,9 +319,18 @@
   justify-content: center;
   width: 4rem;
   height: 4rem;
-  background-color: var(--color-primary);
   border-radius: 50%;
   margin-bottom: var(--space-m);
+
+
+}
+
+.card__circle--green {
+  background-color: var(--color-primary);
+}
+
+.card__circle--yellow {
+  background-color: var(--color-tertiary);
 }
 
 .farm-images {
