--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -202,7 +202,7 @@
       <div class="three-steps container">
         <div class="card">
           <div class="card__header">
-            <div class="card__circle">
+            <div class="card__circle card__circle--green" data-section-target="circle">
               <h2>1</h2>
             </div>
             <h1>Post a task</h1>
@@ -219,7 +219,7 @@
         </div>
         <div class="card">
           <div class="card__header">
-            <div class="card__circle">
+            <div class="card__circle card__circle--green" data-section-target="circle">
               <h2>2</h2>
             </div>
             <h1>Get matched</h1>
@@ -234,7 +234,7 @@
         </div>
         <div class="card">
           <div class="card__header">
-            <div class="card__circle">
+            <div class="card__circle card__circle--green" data-section-target="circle">
               <h2>3</h2>
             </div>
             <h1>Review the task</h1>
@@ -253,7 +253,7 @@
       <div class="three-steps container">
         <div class="card">
           <div class="card__header">
-            <div class="card__circle">
+            <div class="card__circle card__circle--yellow">
               <h2>1</h2>
             </div>
             <h1>Set up a profile</h1>
@@ -270,7 +270,7 @@
         </div>
         <div class="card">
           <div class="card__header">
-            <div class="card__circle">
+            <div class="card__circle card__circle--yellow">
               <h2>2</h2>
             </div>
             <h1>Get matched</h1>
@@ -285,7 +285,7 @@
         </div>
         <div class="card">
           <div class="card__header">
-            <div class="card__circle">
+            <div class="card__circle card__circle--yellow">
               <h2>3</h2>
             </div>
             <h1>Get reviewed</h1>
