--- a/app/assets/stylesheets/components/_flash.scss
+++ b/app/assets/stylesheets/components/_flash.scss
@@ -1,22 +1,25 @@
 
 .notice {
-  position: fixed;
-  left: 50%;
-  transform: translateX(-50%);
-  top: 40%;
   background-color: var(--color-background);
   padding: 2rem;
   box-shadow: 4px 2px var(--color-primary);
   border: 1px solid var(--color-text-muted);
   border-radius: var(--border-radius);
 
-  h2 {
+  h1, h2, h4 {
     text-align: center;
   }
 
   p {
     text-align: center;
   }
+}
+
+.flash-notice {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 40%;
 }
 
 .btn-close {
