Add terms of service validation to PotentialUser Add :terms_of_service to potential_users table as a boolean Add checkbox for terms of service to form Add test to ensure that new potential users cannot be created without ticking gdpr box

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -21,6 +21,7 @@
   border-radius: var(--border-radius);
   border: 1px solid rgb(194, 194, 194);
   margin-bottom: var(--space-m);
+  max-width: 30rem;
 
   @include media(tabletAndUp) {
     min-width: 25rem;
@@ -63,5 +64,13 @@
     display: flex;
     align-self: center;
     justify-content: center;
+  }
+
+  .form-gdpr-consent {
+    font-size: var(--font-size-s);
+  }
+
+  #potential_user_terms_of_service {
+    margin-right: 0.5rem;
   }
 }
