--- a/app/views/potential_users/_new.html.erb
+++ b/app/views/potential_users/_new.html.erb
@@ -6,8 +6,8 @@
   <%= f.input :job, collection: PotentialUser::JOBS, prompt: "- Select -", input_html: { class: "form-field" } %>
   <%= f.input :county, collection: PotentialUser::COUNTIES, prompt: "- Select -", input_html: { class: "form-field"} %>
   <%= f.input :terms_of_service, as: :boolean,
-                                 label: "I have read and agree to the GDPR notice, and I consent to the collection and use of my personal data as described therein.",
-                                 label_html: { class: "form-gdpr-consent"}  %>
+                                 label: sanitize("I have read and agree to the #{link_to "GDPR notice", gdpr_path}, and I consent to the collection and use of my personal data as described therein."),
+                                 label_html: { class: "form-gdpr-consent"} %>
   <div class="form-submit">
     <%= f.submit 'Submit', class: "btn btn--primary" %>
   </div>
