--- a/app/views/potential_users/_new.html.erb
+++ b/app/views/potential_users/_new.html.erb
@@ -3,7 +3,7 @@
   <%= f.input :name, input_html: { autofocus: true, class: "form-field" }  %>
   <%= f.input :surname, input_html: { class: "form-field" } %>
   <%= f.input :email, input_html: { class: "form-field" } %>
-  <%= f.input :job, collection: PotentialUser::JOBS, prompt: "- Select -", input_html: { class: "form-field" } %>
+  <%= f.input :role, collection: PotentialUser::ROLES, prompt: "- Select -", input_html: { class: "form-field" } %>
   <%= f.input :county, collection: PotentialUser::COUNTIES, prompt: "- Select -", input_html: { class: "form-field"} %>
   <%= f.input :terms_of_service, as: :boolean,
                                  label: sanitize("I have read and agree to the #{link_to "GDPR notice", gdpr_path}, and I consent to the collection and use of my personal data as described therein."),
