--- a/app/views/potential_users/_potential_user.html.erb
+++ b/app/views/potential_users/_potential_user.html.erb
@@ -4,6 +4,6 @@
     <h4><%= "#{potential_user.name} #{potential_user.surname}" %></h4>
   </div>
   <p><%= potential_user.email %></p>
-  <p><%= potential_user.job %></p>
+  <p><%= potential_user.role %></p>
   <p><%= potential_user.county %></p>
 </div>
