--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -39,28 +39,54 @@
       <h2 class="title section__title section__title--green">OUR SOLUTION</h2>
     </div>
     <div class="why-us__body">
+      <div class="why-us__body--title">
+        <h4>Issues in Irish Agriculture</h4>
+      </div>
       <div>
         <i class="fa-regular fa-hand-point-right"></i>
         <p>
-          Operating costs on Irish farms have increased dramatically in recent years.
+          Irish farms have seen a 29% cost increase since 2022, forcing farmers
+          to lower Agri contracting expenses for profitability.
         </p>
       </div>
       <div>
         <i class="fa-regular fa-hand-point-right"></i>
         <p>
-          The entire Irish agricultural sector has faced unprecedented labour shortages.
+          Climate change is causing operational disruptions and tighter
+          timeframes, highlighting the need for dependable Agri Contractors to
+          meet deadlines.
         </p>
       </div>
       <div>
         <i class="fa-regular fa-hand-point-right"></i>
         <p>
-          Farm Match allows Farmers to post a job to the community directly.
+          Chronic labour shortages persist in the Irish agricultural sector,
+          exacerbated by an ageing farmer population and declining family
+          involvement. Finding farm workers remains a challenge.
+        </p>
+      </div>
+      <div class="why-us__body--title">
+        <h4>How Farm Match Helps</h4>
+      </div>
+      <div>
+        <i class="fa-regular fa-hand-point-right"></i>
+        <p>
+          Farm Match offers a solution to optimize Agri contracting costs and
+          address labour shortages directly.
         </p>
       </div>
       <div>
         <i class="fa-regular fa-hand-point-right"></i>
         <p>
-          Interested Agri Contractors and Farm Workers can respond with their quotations.
+          Farmers can post tasks and connect with Agri Contractors and Farm
+          Workers on the platform.
+        </p>
+      </div>
+      <div>
+        <i class="fa-regular fa-hand-point-right"></i>
+        <p>
+          Farm Match matches tasks with interested contractors and workers in
+          the area, providing farmers with greater choice and flexibility.
         </p>
       </div>
     </div>
